New FrostyBoy Sandbox/src/objects/Monthly_Payment__c.object
<CustomObject>
    <description>This object tracks the monthly payments expected from a machine location (only if Rent/FOL). If a machine is at a location and is active , a new record is created at the start of the month using a batch class. it populates the expected revenue from that machine this month and possibly creates a task against the owner to follow up on the invoice at the end of the month.</description>
    <fields>
        <fullName>Actual_Rent__c</fullName>
        <label>Actual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Rent__c</fullName>
        <label>Expected Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Machine_Location__c</fullName>
        <label>Machine Location</label>
        <referenceTo>Machine_Inventory__c</referenceTo>
        <relationshipLabel>Monthly Payments</relationshipLabel>
        <relationshipName>Monthly_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Monthly Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Machine_Location__c</columns>
        <columns>Actual_Rent__c</columns>
        <columns>Expected_Rent__c</columns>
        <columns>Month__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Monthly Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateReasonMandotary</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Actual_Rent__c &lt; Expected_Rent__c, ISBLANK(Reason__c) )</errorConditionFormula>
        <errorMessage>Please enter the reason why Actual Rent is less than Expected Rent</errorMessage>
    </validationRules>
</CustomObject>